--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="34.jpg"alt="Your Profile Picture" class="profile-picture">
             <h1>Hemalatha M</h1></h1>
             <p>Am Bsc computer science</p>
         </div>
